@@ -3,7 +3,7 @@ package Moose::Autobox::List;
 use Moose::Role 'with', 'requires';
 use Moose::Autobox;
 
-our $VERSION = '0.09';
+our $VERSION = '0.10';
 
 with 'Moose::Autobox::Value';
 
